commit tree ec3f660b4c6cd4f989d094d65190bdce0ac982ec

--- a/index.html
+++ b/index.html
@@ -11,37 +11,41 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
+    <form>
 
+    </form>
 
       <!-- Add a label for 'fullname'-->
-
+      <label for="fullname">Full Name:</label><br>
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
+      <input required type="text" id="fullname" name="fullname" placeholder="Enter Name"><br>
       <!-- Include the place holder text "Enter Name" and make this input required -->
 
 
       <!-- Add a label for 'email'-->
-
+      <label for="email">Email:</label><br>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-
+      <input required type="text" id="email" name="email" placeholder="Enter Email"><br>
 
       <!-- Add a label for 'phone'-->
-
+      <label for="phone">Phone:</label><br>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
+      <input type="text" id="phone" name="email" placeholder="Enter Telephone (optional)"><br>
 
       <!-- Add a label for 'message'-->
-
+      <label for="message">Message:</label><br>
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-
+      <input required type="text" id="message" name="message" placeholder="Enter Message"><br>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
+      <input type="checkbox" id="checkbox" value="Checked">
+      <label for="checkbox">Check Me!</label><br>
 
       <!-- Add an input with the type set to 'submit' -->
+      <input type="submit" value="Submit">
 
     
   </body>
